--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 <body >
     <div class="form">
         <h1>Weather Application</h1>
-        <input type="text" title="cityname" placeholder="Enter City Name" class="City">
-        <button title="FetchButton" id="fetchBtn">Fetch Data</button>
+        <div class="clicks">
+            <input type="text" title="cityname" placeholder="Enter City Name" class="City" id="cityname">
+            <button title="FetchButton" id="fetchBtn">Get Weather</button>
+        </div>
+        <h1 class="detail"></h1>
+        <p class="temp">Temprature: C</p>
+        <p class="feels">Feels-like: C</p>
+        <p class="des">Description: </p>
+        <img src="" alt="">
+        <p class="humidity">Humidity: </p>
+        <p class="wind">Wind-Speed: m/s</p>
     </div>
     <script src="index.js"></script>
 </body>
