--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <input type="text" title="cityname" placeholder="Enter City Name" class="City" id="cityname">
             <button title="FetchButton" id="fetchBtn">Get Weather</button>
         </div>
-        <h1 class="detail"></h1>
-        <p class="temp">Temprature: C</p>
-        <p class="feels">Feels-like: C</p>
-        <p class="des">Description: </p>
-        <img src="" alt="">
-        <p class="humidity">Humidity: </p>
-        <p class="wind">Wind-Speed: m/s</p>
+        <h1 id="detail"></h1>
+        <p id="temp">Temprature: </p>
+        <p id="feels">Feels-like: </p>
+        <p id="des">Description: </p>
+        <img src="" alt="" id="icon">
+        <p id="humidity">Humidity: </p>
+        <p id="wind">Wind-Speed: </p>
     </div>
     <script src="index.js"></script>
 </body>
